[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Blocks.png" type="Texture" id=1]
[ext_resource path="res://World/Blocks/BombBlock.gd" type="Script" id=2]

[sub_resource type="Shader" id=6]
resource_local_to_scene = true
code = "shader_type canvas_item;

uniform bool active = false;

void fragment() {
	vec4 previous_color = texture(TEXTURE, UV);
	vec4 white_color = vec4(1.0, 1.0, 1.0, previous_color.a);
	vec4 new_color = previous_color;

	if (active) {
		new_color = white_color;
	}

	COLOR = new_color;
}"

[sub_resource type="ShaderMaterial" id=7]
resource_local_to_scene = true
shader = SubResource( 6 )
shader_param/active = false

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 12 )

[sub_resource type="CircleShape2D" id=8]
radius = 17.0

[sub_resource type="Animation" id=5]
resource_name = "BlinkAnimation"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="BombBlock" type="KinematicBody2D" groups=["WorldBlocks"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 7 )
texture = ExtResource( 1 )
hframes = 6
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ExplodeArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplodeArea"]
shape = SubResource( 2 )

[node name="PlayerCheckArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCheckArea"]
shape = SubResource( 8 )

[node name="FuseTimer" type="Timer" parent="."]
one_shot = true

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
anims/BlinkAnimation = SubResource( 5 )

[connection signal="body_entered" from="PlayerCheckArea" to="." method="_on_PlayerCheckArea_body_entered"]
[connection signal="timeout" from="FuseTimer" to="." method="_on_FuseTimer_timeout"]
